--- a/dualANSK/Haneoka/reports/template.html
+++ b/dualANSK/Haneoka/reports/template.html
@@ -14,20 +14,22 @@ ul.nav a { zoom: 1; }  /* 缩放属性将为 IE 提供其需要的 hasLayout 触
 <body>
 
 <div class="container">
-  <div class="header"><a href="#"> 
+  <div class="header"><a href="index.html"> 
     <img src="logo.png" alt="羽丘周刊徽标" class="logo" />
     </a> 
     <!-- end .header --></div>
   <div class="sidebar1">
     <ul class="nav">
-      <li><a href="#">链接一</a></li>
+      <li><a href="#">重载本页面</a></li>
       <li><a href="#">链接二</a></li>
       <li><a href="#">链接三</a></li>
-      <li><a href="#">链接四</a></li>
+      <li><a href="#">超时空链接</a></li>
     </ul>
     <p> 以上链接说明了一种基本导航结构，该结构使用以 CSS 设置样式的无序列表。请以此作为起点修改属性，以生成您自己的独特外观。如果需要弹出菜单，请使用 Spry 菜单、Adobe Exchange 中的菜单构件 或其它各种 javascript 或 CSS 解决方案创建您自己的菜单。</p>
     <p>如果您想要在顶部进行导航，只需将 ul.nav 移到页面顶部并重新创建样式即可。</p>
-    <!-- end .sidebar1 --></div>
+    <!-- end .sidebar1 -->
+  </div>
+  
   <div class="content">
     <h1>说明</h1>
     <p>请注意，这些布局的 CSS 带有大量注释。如果您的大部分工作都在设计视图中进行，请快速浏览一下代码，获取有关如何使用液态布局 CSS 的提示。您可以先删除这些注释，然后启动您的站点。要了解有关这些 CSS 布局中使用的方法的更多信息，请阅读 Adobe 开发人员中心上的以下文章：<a href=http://www.adobe.com/go/adc_css_layouts">http://www.adobe.com/go/adc_css_layouts</a>。</p>
