--- a/dualANSK/Haneoka/20200414-01R.html
+++ b/dualANSK/Haneoka/20200414-01R.html
@@ -3,19 +3,14 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>通讯_4月14日看羽丘物品失踪事件始末_村木佳</title>
-<link href="twoCL.css" rel="stylesheet" type="text/css"><!--[if lte IE 7]>
-<style>
-.content { margin-right: -1px; } /* 此 1px 负边距可以放置在此布局中的任何列中，且具有相同的校正效果。 */
-ul.nav a { zoom: 1; }  /* 缩放属性将为 IE 提供其需要的 hasLayout 触发器，用于校正链接之间的额外空白 */
-</style>
-<![endif]-->
+<link href="./css/twoCL.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
 <div class="container">
   <div class="header"><a href="../index.html"> 
-    <img src="../../img/haneoka.png" alt="羽丘周刊徽标" class="logo" />
+    <img src="./img/logo.png" alt="羽丘周刊徽标" class="logo" />
     </a> 
     <!-- end .header --></div>
   <div class="sidebar1">
