--- a/dualANSK/Haneoka/20200414-03R.html
+++ b/dualANSK/Haneoka/20200414-03R.html
@@ -15,7 +15,7 @@ ul.nav a { zoom: 1; }  /* 缩放属性将为 IE 提供其需要的 hasLayout 触
 
 <div class="container">
   <div class="header"><a href="../index.html"> 
-    <img src="../../img/haneoka.png" alt="羽丘周刊徽标" class="logo" />
+    <img src="./img/logo.webp" alt="羽丘周刊徽标" class="logo" />
     </a> 
     <!-- end .header --></div>
   <div class="sidebar1">
