--- a/dualANSK/Haneoka/index.html
+++ b/dualANSK/Haneoka/index.html
@@ -25,15 +25,16 @@
         <td><a href="">立即注册</a></td>
       </tr>
     </table>
-    <hr>
-    <a href="">羽丘论坛</a>
-    <a href="./news.html">校园新闻</a>
-    <a href="">每日签到</a>
-    <a href="">二手物品</a>
-    <a href="">联系我们</a>
+    <nav id="NavBar">
+      <a href="">羽丘论坛</a>
+      <a href="./news.html" id="NB">校园新闻</a>
+      <a href="">每日签到</a>
+      <a href="">二手物品</a>
+      <a href="">联系我们</a>
+    </nav>
   </header>
   <main>
-    <p>
+    <p class="popularity">
       <img src="" alt="">
       今日:114
         <span id="pipe">|</span>
@@ -73,8 +74,8 @@
       </table>
     </div>
     <hr>
-    <div><h2>论坛版块</h2></div>
-    <div>
+    <div><h2 class="sec">论坛版块</h2></div>
+    <div class="sec">
       <table>
         <tbody>
           <tr>
