--- a/dualANSK/Haneoka/20200414-01R.html
+++ b/dualANSK/Haneoka/20200414-01R.html
@@ -9,8 +9,9 @@
 <body>
 
 <div class="container">
-  <div class="header"><a href="../index.html"> 
-    <img src="./img/logo.png" alt="羽丘周刊徽标" class="logo" />
+  <div class="header">
+    <a href="./index.html"> 
+      <img src="./img/logo.webp" alt="羽丘周刊徽标" class="logo" />
     </a> 
     <!-- end .header --></div>
   <div class="sidebar1">
