--- a/dualANSK/Haneoka/index.html
+++ b/dualANSK/Haneoka/index.html
@@ -4,15 +4,21 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>羽丘周刊门户网站</title>
+  <title>羽丘论坛门户网站</title>
   <link rel="stylesheet" href="./css/ind.css">
+  <link rel="stylesheet" href="./css/header.css">
+  <style>
+    #unusable{
+      background-color: #013180;
+      font-weight:550;
+    }
+  </style>
 </head>
-
 <body>
   <header>
     <div class="LogoLogIn">
-      <img src="./img/logo.webp" alt="羽丘周刊徽标" class="logo" />
-      <table id="tab">
+      <img src="./img/logo.webp" alt="羽丘论坛徽标" class="logo" />
+      <table class="tab">
         <tr>
           <td> <label for="name">用户名</label> </td>
           <td> <input type="text" id="name" placeholder="请输入用户名"></td>
@@ -28,7 +34,7 @@
       </table>
     </div>
     <nav id="NavBar">
-      <a href="">羽丘论坛</a>
+      <a href="" id="unusable">羽丘论坛</a>
       <a href="./news.html" id="NB">校园新闻</a>
       <a href="">每日签到</a>
       <a href="">二手物品</a>
@@ -47,10 +53,9 @@
     <div>
     <div class="sulan">
       <div id="img-wrap">
-        <img src="./img/001.png" name="羽丘女子学园2020级入学典礼于4月8日成功召开" alt="羽丘女子学园2020级入学典礼于4月8日成功召开">
-        <img src="./img/002.png" name="羽丘-花咲川两校联合会演暂定于5月下旬开幕" alt="羽丘-花咲川两校联合汇演暂定于5月下旬开幕">
+        <img src="./img/001.png"  alt="羽丘女子学园2020级入学典礼于4月8日成功召开">
+        <img src="./img/002.png"  alt="羽丘-花咲川两校联合汇演暂定于5月下旬开幕">
         <img src="./img/003.png">
-        <img src="./img/004.png">
       </div>
       <div id="news">
         <h2>新闻速递</h2>
